--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Django==4.0.3
 django-pandas==0.6.6
 numpy==1.22.3
 pandas==1.4.2
+gunicorn==20.1.0
 Pillow==9.0.1
 psycopg2==2.9.3
 python-dateutil==2.8.2
